# tree-sitter-firrtl

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  index.js  package.json
.github/workflows/: linux.yml  macos.yml  nodejs.yml  windows.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/: firrtl.h
corpus/: basic.txt  when.txt
docs/: README.md  tree-sitter-firrtl.wasm  tree-sitter.js  tree-sitter.wasm
queries/: folds.scm  highlights.scm  indents.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: basic.txt  when.txt
