[package]
name = "tree-sitter-firrtl"
description = "firrtl grammar for the tree-sitter parsing library"
version = "0.8.0"
authors = [
	"Aliaksei Chapyzhenka <alex.drom@gmail.com>",
	"Amaan Qureshi <amaanq12@gmail.com>",
	"Andrew Young <youngar17@gmail.com>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "firrtl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/chipsalliance/tree-sitter-firrtl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
